--- a/index.html
+++ b/index.html
@@ -39,14 +39,13 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2>Hello<br />
-							This is an archive for my fabacademy journey</h2>
-						</header>
-						<p></p>
+							<a href="" class="avatar" class="image fit"><img src="images/fablab-logo.png" alt="" /></a>
+							<h1>Noura Alnuaimi</h1><br />
+							<h1>This is an archive for my fabacademy journey</h1>
 						<ul class="actions">
 							<li><a href="https://fabacademy.org/2022/schedule.html" class="button">Fabacademy schedule 2022</a></li>
 						</ul>
-					</section>
+				
 
 				<!-- Two -->
 					<section id="two">
