--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.png" alt="avatar" /></a>
+					<h1>Noura Alnuaimi</h1>
+					<a class="image avatar"><img src="images/avatar.png" alt="avatar" /></a>
 					<h1><strong>I am Noura</strong>, a curious mind<br />
 					enjoy learning new things<br /></h1>
 				</div>
@@ -30,7 +31,6 @@
 								</div>
 								
 							</div>
-
 			</header>
 		
 		<!-- Main -->
@@ -39,9 +39,8 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<a href="" class="avatar" class="image fit"><img src="images/fablab-logo.png" alt="" /></a>
-							<h1>Noura Alnuaimi</h1><br />
-							<h1>This is an archive for my fabacademy journey</h1>
+							<a class="avatar" class="image fit"><img src="images/fablab-logo.png" alt="" /></a>
+							<center><h1>My fabacademy journey</h1></center>
 						<ul class="actions">
 							<li><a href="https://fabacademy.org/2022/schedule.html" class="button">Fabacademy schedule 2022</a></li>
 						</ul>
