--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 							<li><a href="prefabacademy.html" class="button small">Github</a></li>
 							<li><a href="workshops.html" class="button small">Workshops</a></li>
 						</ul>   
+						<a href="prefabacademy.html">Github</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/week1.jpeg" class="image fit thumb"><img src="images/week1.jpeg" alt="" /></a>
