--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 								<h3>Pre-fabacademy</h3>
 								<p>List all things I learned during this period of time.</p>
                                 <ul class="actions">
-							<li><a href="prefabacademy.html" class="button small">Github</a></li>
+							<li><a href="git.html" class="button small">Github</a></li>
 							<li><a href="workshops.html" class="button small">Workshops</a></li>
 						</ul>   
-						<a href="prefabacademy.html">Github</a>
+						<a href="git.html">Github</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/week1.jpeg" class="image fit thumb"><img src="images/week1.jpeg" alt="" /></a>
