--- a/about-me.html
+++ b/about-me.html
@@ -10,6 +10,8 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
+					<a class="image avatar"><img src="images/logo.jpeg" alt="" /></a>
+					<h1>Noura Alnuaimi</h1>
 					<a href="#" class="image avatar"><img src="images/avatar.png" alt="avatar" /></a>
 					<h1><strong>I am Noura</strong>, a curious mind<br />
 					enjoy learning new things<br /></h1>
