--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
+					<a class="image avatar"><img src="images/logo.jpeg" alt="" /></a>
 					<h1>Noura Alnuaimi</h1>
 					<a class="image avatar"><img src="images/avatar.png" alt="avatar" /></a>
 					<h1><strong>I am Noura</strong>, a curious mind<br />
@@ -55,10 +56,10 @@
 								<h3>Pre-fabacademy</h3>
 								<p>List all things I learned during this period of time.</p>
                                 <ul class="actions">
-							<li><a href="git.html" class="button small">Github</a></li>
+							<li><a href="setup.html" class="button small">Github</a></li>
 							<li><a href="workshops.html" class="button small">Workshops</a></li>
 						</ul>   
-						<a href="git.html">Github</a>
+						<a href="setup.html">Github</a>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/week1.jpeg" class="image fit thumb"><img src="images/week1.jpeg" alt="" /></a>
