--- a/setup.html
+++ b/setup.html
@@ -10,6 +10,8 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
+				<a class="image avatar"><img src="images/logo.jpeg" alt="" /></a>
+					<h1>Noura Alnuaimi</h1>
 					<a href="#" class="image avatar"><img src="images/avatar.png" alt="avatar" /></a>
 					<h1><strong>I am Noura</strong>, a curious mind<br />
 					enjoy learning new things<br /></h1>
@@ -53,23 +55,23 @@
 							In this section I'll show how I created a repo in github and how to link github repo with PC. Also, I'll demonstrate how I did push the changes from my PC to github and how to Hoste a website in the github project folder and editing on it from PC using terminal.<br/>
 							<h1>Github hosting:</h1>
 							First I used my gmail email to create a github account. Then setup the git to connect it to my laptop so I can upload every update I make using terminal. Setup steps as following:<br/>
-							1) Create web name:<a class="image fit"><img src="images/1)%20create%20web%20name.png"></a>
-							2) Configuration for the username and password:<a class="image fit"><img src="images/2)%20config.png"></a>
+							1) Create web name:<a class="image fit"><img src="images/1-create%20web%20name.png"></a>
+							2) Configuration for the username and password:<a class="image fit"><img src="images/2-config.png"></a>
 							3) Add ssh key to github: <a class="image fit"><img src="images/3)%20ssh%20key_for%20hosting.png"></a>
-							<a class="image fit"><img src="images/4)%20add%20ssh%20key%20to%20github.png"></a>
-							4) Cloning using https: <a class="image fit"><img src="images/5)%20https%20clone.png"></a>
-						    5) I faced a problem when trying to upload files to my website, maybe because of cloning using https: <a class="image fit"><img src="images/6)%20upload%20problem%20.png"></a>
-							6) To solve the problem I tried to copy repo clone and do the cloning again using it: <a class="image fit"><img src="images/7)%20copy%20repo%20clone%20.png"></a>
-							<a class="image fit"><img src="images/8)%20changed%20repo_made%20clone%20again%20using%20repo%20clone%20git.png"></a>
+							<a class="image fit"><img src="images/4-add%20ssh%20key%20to%20github.png"></a>
+							4) Cloning using https: <a class="image fit"><img src="images/5-https%20clone.png"></a>
+						    5) I faced a problem when trying to upload files to my website, maybe because of cloning using https: <a class="image fit"><img src="images/6-upload%20problem%20.png"></a>
+							6) To solve the problem I tried to copy repo clone and do the cloning again using it: <a class="image fit"><img src="images/7-copy%20repo%20clone%20.png"></a>
+							<a class="image fit"><img src="images/8-changed%20repo_made%20clone%20again%20using%20repo%20clone%20git.png"></a>
 							Changed repo_made clone again using repo clone git using the code below:
 							<br/>
 							<code>git clone git@github.com:nouraalnuaimi/nourawebsite.git</code>
 							<br/>
-							7) After cloning using GITHUB CLI; Upload note file as a try to the website:<a class="image fit"><img src="images/9)%20upload%20note%20file%20as%20a%20try%20to%20the%20website%20.png"></a>
-							8) Upload a picture:<a class="image fit"><img src="images/10)%20upload%20a%20pic%20to%20my%20website.png"></a>
-							9) Uploadig template website files to the github hosting:<a class="image fit"><img src="images/11)%20uploadig%20template%20website%20files%20to%20the%20github%20hosting.png"></a>
-							10) My website files being uploaded:<a class="image fit"><img src="images/12)%20my%20website%20files%20being%20uploaded%20.png"></a>
-							11) Creating a page in the main branch in github to show the html template files on my website: <a class="image fit"><img src="images/13)%20creating%20a%20page%20in%20the%20main%20branch%20in%20github%20to%20show%20the%20html%20template%20files%20on%20my%20website.png"></a>
+							7) After cloning using GITHUB CLI; Upload note file as a try to the website:<a class="image fit"><img src="images/9-upload%20note%20file%20as%20a%20try%20to%20the%20website%20.png"></a>
+							8) Upload a picture:<a class="image fit"><img src="images/10-upload%20a%20pic%20to%20my%20website.png"></a>
+							9) Uploadig template website files to the github hosting:<a class="image fit"><img src="images/11-uploadig%20template%20website%20files%20to%20the%20github%20hosting.png"></a>
+							10) My website files being uploaded:<a class="image fit"><img src="images/12-my%20website%20files%20being%20uploaded%20.png"></a>
+							11) Creating a page in the main branch in github to show the html template files on my website: <a class="image fit"><img src="images/13-creating%20a%20page%20in%20the%20main%20branch%20in%20github%20to%20show%20the%20html%20template%20files%20on%20my%20website.png"></a>
 								
 							<h1>Issue</h1>
 							Probelm faced while trying to upload website files: <a class="image fit"><img src="images/error.png"></a>
