--- a/workshops.html
+++ b/workshops.html
@@ -69,13 +69,46 @@
 						<header class="major">
 							<section>
 							<h1><b>4) PCB fabrication workshop</b></h1>
-							<a href="http://fab.cba.mit.edu/classes/863.16/doc/projects/ftsmin/index.html">Reference</a> <br/>
+						    <a href="http://fab.cba.mit.edu/classes/863.16/doc/projects/ftsmin/index.html">Reference</a> <br/>
 							Using the PCB pictures from the reference above to create process file .rml
-							<p>Used files:<br/>
-							<a href="http://fab.cba.mit.edu/classes/863.16/doc/projects/ftsmin/fts_mini_traces.png">Traces</a>
-							<br/>
-							<a href="">Outline</a></p>
 							
+<head>
+<style>
+table {
+  font-family: arial, sans-serif;
+  border-collapse: collapse;
+  width: 50%;
+}
+
+td, th {
+  border: 1px solid;
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even) {
+
+}
+</style>
+</head>
+<body>
+
+<h2><center>Used Files</center></h2>
+
+<center><table>
+  <tr>
+    <th>Files</th>
+    <th>Link</th>
+  </tr>
+  <tr>
+    <td>Traces</td>
+	  <td><a href="files/fts_mini_traces.rml" class="Small Button">View</a></td>
+  </tr>
+  <tr>
+    <td>Outline</td>
+	  <td><a href="files/fts_mini_cut.rml" class="Small Button">View</a></td>
+  </tr>
+	</table></center>
 							<h4>4.1) PCB Design and preparing</h4>
 						    Using the <a href="http://fabmodules.org/">Fabmodules</a> to convert image to G-code for the milling process.<br/>
 							Steps:
