--- a/workshops.html
+++ b/workshops.html
@@ -102,11 +102,11 @@ tr:nth-child(even) {
   </tr>
   <tr>
     <td>Traces</td>
-	  <td><a href="files/fts_mini_traces.rml" class="Small Button">View</a></td>
+	  <td><a href="files/fts_mini_traces.rml" class="Small Button">Download</a></td>
   </tr>
   <tr>
     <td>Outline</td>
-	  <td><a href="files/fts_mini_cut.rml" class="Small Button">View</a></td>
+	  <td><a href="files/fts_mini_cut.rml" class="Small Button">Download</a></td>
   </tr>
 	</table></center>
 							<h4>4.1) PCB Design and preparing</h4>
