--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 								<h3>Week2</h3>
 								<p>Project managment</p>
                                   <ul class="actions">
-							<li><a href="#" class="button small">Visit page</a></li>
+							<li><a href="project-managment.html" class="button small">Visit page</a></li>
 						</ul>   
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
