--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<a class="avatar" class="image fit"><img src="images/fablab-logo.png" alt="" /></a>
+							<a class="avatar" class="image fit"><img src="images/fablab.png" alt="" /></a>
 							<center><h1>My fabacademy journey</h1></center>
 						<ul class="actions">
 							<li><a href="https://fabacademy.org/2022/schedule.html" class="button">Fabacademy schedule 2022</a></li>
