--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/pre.jpeg" class="image fit thumb"><img src="images/pre.jpeg" alt="" /></a>
-								<h3>Pre-fabacademy</h3>
+								<h3>Pre-fabacademy💻🤓</h3>
 								<p>List all things I learned during this period of time.</p>
                                 <ul class="actions">
 							<li><a href="setup.html" class="button small">Github</a></li>
@@ -64,23 +64,23 @@
 								<h3>Week1</h3>
 								<p>Principles & Practices</p>
                                   <ul class="actions">
-							<li><a href="principles-and-practices.html" class="button small">Visit page</a></li>
+							<li><a href="week1-principles-and-practices.html" class="button small">Visit page</a></li>
 						</ul>   
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/03.jpg" alt="" /></a>
+								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/git.jpeg" alt="" /></a>
 								<h3>Week2</h3>
 								<p>Project managment</p>
                                   <ul class="actions">
-							<li><a href="project-managment.html" class="button small">Visit page</a></li>
+							<li><a href="week2-project-managment.html" class="button small">Visit page</a></li>
 						</ul>   
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/04.jpg" alt="" /></a>
+								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/cad.jpeg" alt="" /></a>
 								<h3>Week3</h3>
 								<p>Computer-aided design(CAD)</p>
                                   <ul class="actions">
-							<li><a href="#" class="button small">Visit page</a></li>
+							<li><a href="week3-cad.html" class="button small">Visit page</a></li>
 						</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
@@ -88,13 +88,13 @@
 								<h3>Week4</h3>
 								<p>Computer-controlled cutting</p>
                                   <ul class="actions">
-							<li><a href="#" class="button small">Visit page</a></li>
+							<li><a href="week4-cnc.html" class="button small">Visit page</a></li>
 						</ul>   
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
 								<h3>Week5</h3>
-								<p>...</p>
+								<p>Electronics production</p>
                                   <ul class="actions">
 							<li><a href="#" class="button small">Visit page</a></li>
 						</ul>   
