--- a/setup.html
+++ b/setup.html
@@ -35,8 +35,9 @@
 						<header class="major">
 							<section>
 							<h1>Git online workshop</h1>
-							<p>This was the first thing learned from Fablab. The workshop was giving online using Microsoft teams by Eng. Hashem. The workshop was about how to start building my own website. At first, I get to know Git and I installed it on my Mac laptop, then Install Git on Mac Downloading HomeBrew to install Git on MacOS:<a class="image fit"><img src="images/git1.png" alt="" /></a> This is the homebrew home page:<a class="image fit"><img src="images/git2.png" alt="" /></a></p>
-							Using terminal; paste the code from the homebrew website:<a class="image fit"><img src="images/git3.png" alt="" /></a>
+							<p>This was the first thing learned from Fablab. The workshop was giving online using Microsoft teams by Eng. Hashem. The workshop was about how to start building my own website. At first, I get to know Git and I installed it on my Mac laptop, then Go to <a href="https://git-scm.com/download/mac">this website</a>, then install Git on Mac Downloading HomeBrew to install Git on MacOS:<a class="image fit"><img src="images/git1.png" alt="" /></a> This is the <a href="https://brew.sh/">HomeBrew</a> home page:<a class="image fit"><img src="images/git2.png" alt="" /></a></p>
+							Using terminal; paste this code<br/>
+							<code>/bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/HEAD/install.sh)"</code>:<a class="image fit"><img src="images/git3.png" alt="" /></a>
 							After the Xcode command done <code>--></code>click enter to complete the installation process:<a class="image fit"><img src="images/git4.png" alt="" /></a>
 							Installation successful:<a class="image fit"><img src="images/git5.png" alt="" /></a>
 							Git installing:<a class="image fit"><img src="images/git6.png" alt="" /></a>
@@ -73,7 +74,7 @@
 							11) Creating a page in the main branch in github to show the html template files on my website: <a class="image fit"><img src="images/13creating%20a%20page%20in%20the%20main%20branch%20in%20github%20to%20show%20the%20html%20template%20files%20on%20my%20website.png"></a>
 								
 							<h1>Issue</h1>
-							Probelm faced while trying to upload website files: <a class="image fit"><img src="images/error.png"></a>
+							Problem faced while trying to upload website files: <a class="image fit"><img src="images/error.png"></a>
 							To solve the issue I used the merge command to merge origin/main branch:<a class="image fit"><img src="images/merge%20origin:main%20branch.png"></a>
 							<hr />
 			
