--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/05.jpg" alt="" /></a>
+								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/" alt="" /></a>
 								<h3>Week4</h3>
 								<p>Computer-controlled cutting</p>
                                   <ul class="actions">
