--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 						</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/" alt="" /></a>
+								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/cnc.jpeg" alt="" /></a>
 								<h3>Week4</h3>
 								<p>Computer-controlled cutting</p>
                                   <ul class="actions">
@@ -92,11 +92,11 @@
 						</ul>   
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/06.jpg" alt="" /></a>
+								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/pcb.jpeg" alt="" /></a>
 								<h3>Week5</h3>
 								<p>Electronics production</p>
                                   <ul class="actions">
-							<li><a href="#" class="button small">Visit page</a></li>
+							<li><a href="week5-electronics-production.html" class="button small">Visit page</a></li>
 						</ul>   
                             </article>
 							<article class="col-6 col-12-xsmall work-item">
