--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 							<a class="avatar" class="image fit"><img src="images/fablab.png" alt="" /></a>
 							<center><h1>My fabacademy journey</h1></center>
 						<ul class="actions">
-							<li><a href="https://fabacademy.org/2022/schedule.html" class="button">Fabacademy schedule 2022</a></li>
+							<center><li><a href="https://fabacademy.org/2022/schedule.html" class="button">Fabacademy schedule 2022</a></li></center>
 						</ul>
 				
 
