--- a/index.html
+++ b/index.html
@@ -42,10 +42,9 @@
 							<a class="avatar" class="image fit"><img src="images/fablab.png" alt="" /></a>
 							<center><h1>My fabacademy journey</h1></center>
 						<ul class="actions">
-							<center><li><a href="https://fabacademy.org/2022/schedule.html" class="button">Fabacademy schedule 2022</a></li></center>
+						<li><a href="https://fabacademy.org/2022/schedule.html" class="button">Fabacademy schedule 2022</a></li>
 						</ul>
-				
-
+	
 				<!-- Two -->
 					<section id="two">
 						<h2>Assignmetns</h2>
