--- a/week5-electronics-production.html
+++ b/week5-electronics-production.html
@@ -123,7 +123,7 @@ tr:nth-child(even) {
 							<a class="image fit"><img src="images/components.jpg"/></a>
 							<center><h3>**Soldering area**</h3>
 							<a class="image fit"><img src="images/soldering%20area.png"></a></center>
-							I start soldering the parts to the PCB, using the <a href="http://fab.cba.mit.edu/classes/863.16/doc/projects/ftsmin/schematic.png">schematic</a> and the board image below as a reference for component values and placement. Start with the most difficult parts (the ATtiny45) first, so I can have the most access. I stuggled with soldering at firt. But with Eng. Hashem help I did install the microcontroller in it's place successfully.
+							I start soldering the parts to the PCB, using the <a href="http://fab.cba.mit.edu/classes/863.16/doc/projects/ftsmin/schematic.png">schematic</a> and the board image below as a reference for component values and placement. Start with the most difficult parts (the ATtiny45) first, so I can have the most access. I stuggled with soldering at first. But with Eng. Hashem help I did install the microcontroller in it's place successfully.
 							<center><h3>**PCB board**</h3>
 							<a class="image fit"><img src="images/pcb_schematic.png"></a></center>
 							Note: I installed R1, R2, C1, and U1. I'll try to finish the remaining components by <b>25th of January 2022</b>.
