--- a/about-me.html
+++ b/about-me.html
@@ -43,16 +43,18 @@
 			 <!-- Two -->
 					<section id="two">
 						<section>
-							<h1>Activites</h1>
-							<p>This is <b>some</b> of my achivements. Also, I have a good background in <i>research</i> and I participted in HCT 2020 conference, and UAEU conference.
-							I've participated in emirates skills 2018 in air conditioning category and won the a silver medal. This is the evidance: <a href="#" class="image avatar"><img src="images/avatar.png" alt="" /></a></p>
+							<h1>Why did I join Fabacademy?</h1>
+							<p>I knew about this oppritunity which is the fabacademy diploma from a collegue</p>however, I have some background about the additive manufacturing which I've gained from my major study. Also, I'm looking to learn more about digital fabrication during fabacademy. The most thing I'm excited to learn about is design and fabricate the PCBs.
+							In addition, I'm looking forward for any internship or job oppritunity.
 							<hr />
+							
 			 <!-- Three -->
 					<section id="three">
 						<section>
-							<h1>Why did I join Fabacademy?</h1>
-							<p>I knew about this oppritunity from a collegue</p>however, I have some background about the additive manufacturing which I've gained from my major. Also, I'm looking to learn more about digital fabrication during fabacademy. The most thing I'm excited to learn about is design and fabricate the PCBs.
-							<hr />
+						<h1>Activites</h1>
+						<p>This is <b>some</b> of my achivements. Also, I have a good background in <i>research</i> and I participted in HCT 2020 conference, and UAEU conference. 
+						I've participated in emirates skills 2018 in air conditioning category and won the a silver medal:<a href="#" class="image avatar"><img src="images/medal.jpg" alt="" /></a></p>
+						<hr />
 				
 		<!-- Footer -->
 			<footer id="footer">
